[metadata]
name = nice_tools-amiwrpremium
version = 0.0.3
author = amiwrpremium
author_email = amiwrpremium@gmail.com
description = A collection of tools for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amiwrpremium/nice_tools
project_urls =
    Bug Tracker = https://github.com/amiwrpremium/nice_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src